public/css/app.css
body {
  overflow-x: hidden;
}


h1 {
  text-shadow: 2px 2px 1px rgba(255, 255, 255, 0.2);
}

a {
  color: rgba(255, 255, 255, 0.25);
}

a:hover {
  background: rgba(255, 255, 255, 0.75);
  border-radius: 3px;
  color: rgba(0, 0, 0, 1);
  text-decoration: none;
  border-bottom: 1px dotted;
  border-bottom-color: rgba(255, 255, 255, 0.25);
}

button a {
  color: rgba(0, 0, 0, 1);
}

.baltimore {
  font-size: 80%;
}

.champion-search {
  margin-botton: 25px;
}

footer {
  bottom: 1px;
  margin: 0 auto;
  position: fixed;
  text-align: center;
  width: 90%;
}

footer a {
  color: rgb(255,255,255);
}

.vertical-break {
  border-left: 1px solid;
  color: rgba(255,255,255, 0.05);
  margin-left: .25%;
  margin-right: .25%;
  display: inline;
}

.champion-img {
  float: left;
  margin-right: 18.3333333px;
}

[ng\:cloak], [ng-cloak], .ng-cloak {
  display: none;
}

